--- a/Classes/06_Poo/06_Poo/06_Poo.csproj
+++ b/Classes/06_Poo/06_Poo/06_Poo.csproj
@@ -16,4 +16,9 @@
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\TextFiles\" />
+    <Folder Include="wwwroot\TextFiles\Product\" />
+  </ItemGroup>
+
 </Project>
