Not working yet

--- a/Classes/06_Poo/06_Poo/06_Poo.csproj
+++ b/Classes/06_Poo/06_Poo/06_Poo.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Folder Include="wwwroot\TextFiles\" />
+    <Folder Include="wwwroot\TextFiles\Customer\" />
     <Folder Include="wwwroot\TextFiles\Product\" />
   </ItemGroup>
 
